[package]
name = "wikitype_api"
version = "0.1.0"
authors = ["krepl <36075613+krepl@users.noreply.github.com>"]
edition = "2018"

[dependencies]
diesel = { version = "1.4.2", features = ["sqlite", "postgres", "mysql", "r2d2", "chrono"] }
dotenv = "0.14.1"
uuid = { version = "0.7.4", features = ["v4"] }
chrono = "0.4"
juniper = "0.12"
juniper_warp = "0.3.0"
warp = "0.1.8"
env_logger = "0.5.11"
log = "0.4.3"
